--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^2.6.2",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.2",
     "morgan": "^1.9.1"
