--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "mongoose": "^5.6.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0"
   }
 }
