--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-mongo": "^3.0.0",
+    "cookie-parser": "^1.4.4",
     "ejs": "^2.6.2",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "mongoose": "^5.6.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
